--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -51,10 +51,11 @@
                              <!-- 实验基本信息告知 -->
                             <el-tabs v-model="expInfoActiveNum" @tab-click="handleClick">
                                 <el-tab-pane label="实验目的" name="first">
-                                    <div class="text-content">目的详细说明......</div>
+                                    <div class="text-content">背景：人工智能系统决定人类权益，且存在公平性问题，有危害
+                                        <br><br>目的：本研究设计了一种审计人工智能个体公平的框架，能够xxx</div>
                                 </el-tab-pane>
                                 <el-tab-pane label="伦理声明" name="second">
-                                    <div class="text-content">伦理声明详细说明</div>
+                                    <div class="text-content">尊敬的志愿者，感谢您参与我们的用户研究。<br><br>在本研究中，我们将使用您的数据来评估我们设计的审计框架的有效性。<br>您的参与对我们的研究至关重要，但请您放心，您的个人身份信息将被严格保密，并且在研究结果中将进行匿名处理。我们将尽最大努力确保您的隐私和数据安全。<br>您有权随时退出研究，而不会受到任何负面影响。如果您有任何疑问或担忧，请随时与我们联系。<br><br>再次感谢您的参与，您的支持对我们的研究具有重要意义。</div>
                                 </el-tab-pane>
                                 <el-tab-pane label="实验入门介绍" name="third">
                                     <div class="text-content"> 算法公平性是什么</div>
