--- a/web/templates/exp01.html
+++ b/web/templates/exp01.html
@@ -38,27 +38,35 @@
     <el-container>
         <!-- Header -->
         <el-header>
-            <h4>欢迎进入公平性审计实验</h4>
+            <h4>待审计模型介绍</h4>
         </el-header>
         
         <!-- Main -->
         <el-main>
             <div class="info">
-                <h1>收入预测分类</h1>
+                <h1>待审计模型：美国成年人收入预测分类</h1>
                 <el-row :gutter="30">
                     <!-- 信息显示 -->
                     <el-col :span="12">
                         <div class="train-info-card">
                             <div class="train-info grid-content bg-purple">
-                                <el-descriptions title="用户信息" :column="1">
-                                    <el-descriptions-item label="训练数据集">本次实验默认Adult数据集</el-descriptions-item>
-                                    <el-descriptions-item label="特征">
+                                <el-descriptions title="模型信息" :column="1">
+                                    <el-descriptions-item label="模型介绍">待审计模型为基于美国1994年人口普查数据训练的收入预测分类模型。预测任务为分类一个人的年收入是否达到$50,000。</el-descriptions-item>
+                                    <el-descriptions-item label="训练数据集">训练数据由巴里·贝克尔从1994年美国人口普查数据库中提取。（https://archive.ics.uci.edu/dataset/2/adult）。</el-descriptions-item>
+                                    <el-descriptions-item label="特征取值范围">
                                         <ul>
                                              <li v-for="(range, feature) in features" :key="feature">
-                                                [[ getFeatureDescription(feature, range) ]]
+                                              [[ getFeatureDescription(feature, range) ]]
+                                              <el-tooltip class="item" effect="light" v-if="getFeatureNote(feature)!=null" :content="getFeatureNote(feature)" placement="right-start"><i class="el-icon-question"/></i></el-tooltip>
                                              </li>
                                         </ul>
                                     </el-descriptions-item>
+                                    <el-descriptions-item label="待预测标签">
+                                        一年内的货币收入 - 待预测，是否高于$50K
+                                        <el-tooltip class="item" effect="light" content="人口普查货币收入被定义为在支付个人所得税、社会保障、工会会费、医疗保险扣除额等之前定期收到的收入(不包括某些货币收入，如资本收益)。" placement="right-start"><i class="el-icon-question"/></i></el-tooltip>
+                                    </el-descriptions-item>
+                                    <el-descriptions-item label="训练集样本数">36,177</el-descriptions-item>
+                                    <el-descriptions-item label="模型类型">四层神经网络模型，隐层维度为64</el-descriptions-item>
                                     <el-descriptions-item label="训练集准确率" >[[ train_accuracy ]]</el-descriptions-item>
                                     <el-descriptions-item label="测试集准确率">[[ test_accuracy ]]</el-descriptions-item>
                                 </el-descriptions>
@@ -69,35 +77,42 @@
                     </el-col>
                     <!-- 输入特征 -->
                     <el-col :span="12">
-                        <h4 style="margin-top: 0">输入待分类的样本信息</h4>
+                        <h4 style="margin-top: 0">输入待分类的样本信息，获得模型分类结果</h4>
+                        <div class="task-content">
+                          <div class="task-content-description">
+                              <p>您可以通过下方的输入框尝试访问待审计的模型。</p>
+                              <p>输入一个人的各项特征值，点击查询按钮后，您可以得到模型对这个人的分类结果（年收入是否大于$50K）。</p>
+                              <p><b>该模型的判别结果可能会影响到相关人群的社会福利等权益分配。</b></p>
+                          </div>
+                        </div>
                         <div class="form-card">
-                            <el-form :model="form" :rules="rules" ref="form" label-width="142px" hide-required-asterisk="true">
+                            <el-form :model="form" :rules="rules" ref="form" label-width="145px" hide-required-asterisk="true">
                                 <div class="form-edit-area">
                                     <el-row :gutter="30">
                                         <el-col :span="12">
-                                            <el-form-item :label="'年龄 (' + default_scope.age[0] + ',' + default_scope.age[1] + ')'" prop="age">
+                                            <el-form-item :label="'年龄 (' + default_scope.age[0] + '~' + default_scope.age[1] + ')'" prop="age">
                                                 <el-input v-model.number="form['age']"></el-input>
                                             </el-form-item>
 
-                                            <el-form-item :label="'每周工作时长 (' + default_scope['hours-per-week'][0] + ',' + default_scope['hours-per-week'][1] + ')'" prop="hours-per-week">
+                                            <el-form-item :label="'每周工作时长 (' + default_scope['hours-per-week'][0] + '~' + default_scope['hours-per-week'][1] + ')'" prop="hours-per-week">
                                                 <el-input  v-model.number="form['hours-per-week']"></el-input>
                                             </el-form-item>
 
-                                            <el-form-item :label="'受教育时长 (' + default_scope['education-num'][0] + ',' + default_scope['education-num'][1] + ')'" prop="education-num">
+                                            <el-form-item :label="'受教育时长 (' + default_scope['education-num'][0] + '~' + default_scope['education-num'][1] + ')'" prop="education-num">
                                                 <el-input v-model.number="form['education-num']"></el-input>
                                             </el-form-item>
 
-                                            <el-form-item :label="'资产收益 (' + default_scope['capital-gain'][0] + ',' + default_scope['capital-gain'][1] + ')'" prop="capital-gain">
+                                            <el-form-item :label="'资产收益 (' + default_scope['capital-gain'][0] + '~' + default_scope['capital-gain'][1] + ')'" prop="capital-gain">
                                                 <el-input v-model.number="form['capital-gain']"></el-input>
                                             </el-form-item>
 
-                                            <el-form-item :label="'资产损失 (' + default_scope['capital-loss'][0] + ',' + default_scope['capital-loss'][1] + ')'" prop="capital-loss">
+                                            <el-form-item :label="'资产损失 (' + default_scope['capital-loss'][0] + '~' + default_scope['capital-loss'][1] + ')'" prop="capital-loss">
                                                 <el-input v-model.number="form['capital-loss']"></el-input>
                                             </el-form-item>
                                         </el-col>
                                         <el-col :span="12">
 
-                                            <el-form-item label="是否为白人" prop="race_White">
+                                            <el-form-item label="种族" prop="race_White">
                                                  <el-select v-model="form['race_White']" placeholder="是否为白人">
                                                   <el-option label="白人" value="1"></el-option>
                                                   <el-option label="非白人" value="0"></el-option>
@@ -105,7 +120,7 @@
 
                                             </el-form-item>
                                             <el-form-item label="性别" prop="sex_Male">
-                                                <el-select v-model="form['sex_Male']" placeholder="请选择性别">
+                                                <el-select v-model="form['sex_Male']" placeholder="男性或女性">
                                                   <el-option label="男" value="0"></el-option>
                                                   <el-option label="女" value="1"></el-option>
                                                 </el-select>
@@ -139,12 +154,12 @@
                                     <el-row :gutter="10">
                                         <el-col :span="12">
                                             <el-form-item>
-                                                <el-button type="primary" @click="submitForm('form')">查询</el-button>
+                                                <el-button type="primary" @click="submitForm('form')" >查询</el-button>
                                               </el-form-item>
                                         </el-col>
                                         <el-col :span="12">
                                             <div style="float: left;">
-                                                <span>分类结果为：</span><span>[[ result ]]</span>
+                                                <span>分类结果为：</span><span v-loading="loading" :class="result_color">[[ result ]]</span>
                                             </div>
                                         </el-col>
                                     </el-row>
@@ -255,24 +270,33 @@
                     {# 准确率 #}
                     train_accuracy:'0.8440',
                     test_accuracy:'0.8387',
-
                     result:'',
-                    rules: {
-
-                    },
+                    rules: {},
+                    loading: false,
+                    result_color: 'red',
                 };
             },
             methods: {
                 {# 提交表单 #}
                 submitForm(formName) {
+                  this.loading = true;
+                  setTimeout(() => {
+                    this.loading = false;
+                  }, 200);
                     this.$refs[formName].validate((valid) => {
                     if (valid) {
                         let form = this.form;
                         axios.post("/api/exp01/", form).then(response =>{
                             this.result = response.data
+                            if (this.result == '年收入低于50K') {
+                              this.result_color = 'red'
+                            } else {
+                              this.result_color = 'green'
+                            }
                         })
                         {#console.log(JSON.stringify(this.form))#}
                     } else {
+                        this.result = ''
                         console.log('error submit!!');
                         return false;
                     }
@@ -297,14 +321,26 @@
                     'capital-loss': `资产损失 - $${range[0]} ~ $${range[1]}`,
                     'education-num': `受教育时长 - ${range[0]}~${range[1]}年`,
                     'hours-per-week': `每周工作时长 - ${range[0]}~${range[1]}小时`,
-                    'race_White': `是否为白人 `,
-                    'sex_Male': `是否为男性 `,
-                    //'marital-status': `婚姻状况 - ${range.join('，')}`,
-                    //'workclass': `工作类型 - ${range.join('，')}`
+                    'race_White': `种族 - 是否为白人 `,
+                    'sex_Male': `性别 - 男性、女性 `,
                     'marital-status': `婚姻状况 - ${range.map(status => this.marital_status_map[status] || status).join('，')}`,
                     'workclass': `工作类型 - ${range.map(classType => this.workclass_map[classType] || classType).join('，')}`
                   };
                   return descriptions[feature] || `${feature} - ${range}`;
+                },
+                getFeatureNote(feature) {
+                  const note = {
+                    'age': null,
+                    'capital-gain': '通过资产销售的方式获得的利润，不计入待预测的“收入”之内',
+                    'capital-loss': '在资产销售过程中产生的损失，不计入待预测的“收入”之内',
+                    'education-num': null,
+                    'hours-per-week': null,
+                    'race-White': null,
+                    'sex-Male': null,
+                    'marital-status': null,
+                    'workclass': null,
+                  };
+                  return note[feature];
                 },
                 generateRules() {
                       const scope = this.default_scope;
@@ -335,7 +371,7 @@
                           { type: 'number', min: scope['capital-loss'][0], max: scope['capital-loss'][1], message: `资产损失必须在${scope['capital-loss'][0]}到${scope['capital-loss'][1]}之间`, trigger: 'blur' }
                         ],
                         'race_White': [
-                          { required: true, message: '请选择是否为白人', trigger: 'change' }
+                          { required: true, message: '请选择种族', trigger: 'change' }
                         ],
                         'sex_Male': [
                           { required: true, message: '请选择性别', trigger: 'change' }
@@ -377,6 +413,15 @@
 
 
      </script>
+
+     <style>
+      .red {
+        color: red;
+      }
+      .green {
+        color: green;
+      }
+     </style>
 
 </body>
 
